# chatbotPL

./: .gitignore  command.txt  pyproject.toml  requirements-web.txt  requirements.txt
config/: filter.json
converted/: 01.2025.tt-btc_20250115052759.docx  01.ct-ttg_20240226063331.docx  05-ct.tw_20230318040859.docx  05.ct-ttg_20250505034142.docx  05_ct-ttg_645049_20250306041640.docx  06.qd-ttg_20230531052707.docx  09_ct-ttg_648598_20250401044311.docx  1015.qd-ttg_20230413111916.docx  1018.qd-bhxh_20240226065105.docx  105.nq-cp_20230728064138.docx  10_ct-ttg_648955_20250401042840.docx  11.nq-cp_20230207043503.docx  1107_qd-bnnmt_654757_20250509044146.docx  1108_qd-bnnmt_654523_20250509044952.docx  126-kl.tw_20250426102652.docx  1359.qd-bhxh_20231220053510.docx  1524.q%C4%91-btnmt_20240802022957.docx  1545.q%C4%91-btnmt_20240802022226.docx  1548.qd-bhxh_20250625040007.docx  16.nq-cp_20231218114057.docx  1674.qd-bhxh_20250625050736.docx  19-kl.tw_20230318041338.docx  19.nq-tw_20230924050725.docx  2015_01.ct-ttg_20240311014655.docx  2019_01.ct-ttg_20240311015110.docx  2022-11-Luat So huu tri tue - HN lan 3.docx  2023_01.ct-ttg_20240311015503.docx  2024_01.ct-ttg_20240311015816.docx  21.nq-tw_20231220052633.docx  217-qd.tw_20230426103201.docx  23.ct-ttg_20230724063721.docx  253.q%C4%91-vpcp_20240604104243.docx  321.q%C4%91-bxd_20240605074345.docx  34-ct.tw_20240624112243.docx  36.qd-ttg_20240223024504.docx  48-nq.tw_20230318042457.docx  50-qd.tw_20250112115626.docx  539.qd-ttg_20230201051834.docx  574.qd-bct_20230619092432.docx  595.qd-bhxh_20240315062524.docx  (+7 more)
(+102 files in other folders)
